# contracts

./: Cargo.toml  Makefile  README.md
.github/workflows/: build-test-contracts.yml  ci.yml
contracts/host_fn/: Makefile
contracts/stake/: Makefile
contracts/transfer/: Makefile
example/: Makefile
example/multisig/: Cargo.toml  Makefile  README.md
example/multisig-core/: Cargo.toml  Makefile
example/multisig-core/src/: error.rs  events.rs  lib.rs
example/multisig/src/: lib.rs  state.rs
example/multisig/tests/: moonlight_stake.rs
genesis/stake/tests/: partial_stake.rs  stake_from_contract.rs
host_fn/: Makefile
scripts/: build-test-contracts.sh  download-rusk.sh
tests/alice/: Makefile
